--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -15,5 +15,7 @@
 	"home_page": "Home Page",
 	"next":"Next",
 	"prev":"Prev",
-	"more_movies": "More movies"
+	"more_movies": "More movies",
+	"similar_movies": "Similar Movies"
+
 }
