--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -15,8 +15,6 @@
 	"home_page": "Главная",
 	"next": "Вперед",
 	"prev": "Назад",
-	"more_movies":"Больше фильмов"
-
-
-
+	"more_movies":"Больше фильмов",
+	"similar_movies":"Похожие Фильмы"
 }
