Добавил мобильное меню и сериалы

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -19,6 +19,6 @@
 	"similar_movies": "Similar Movies",
 	"movies": "Movies",
 	"series": "Series",
-	"popular_series": "Популярные Сериалы"
+	"popular_series": "Popular Series"
 
 }
