--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -19,6 +19,7 @@
 	"similar_movies": "Similar Movies",
 	"movies": "Movies",
 	"series": "Series",
-	"popular_series": "Popular Series"
+	"popular_series": "Popular Series",
+	"seasons_count": "Seasons Count"
 
 }
