--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -19,5 +19,6 @@
 	"similar_movies": "Похожие Фильмы",
 	"movies": "Фильмы",
 	"series": "Сериалы",
-	"popular_series": "Популярные Сериалы"
+	"popular_series": "Популярные Сериалы",
+	"seasons_count": "Всего сезонов"
 }
